fixed-menu-alignment

--- a/adwebsite/src/app/header-main/header-main.component.css
+++ b/adwebsite/src/app/header-main/header-main.component.css
@@ -21,7 +21,7 @@ ul {
 
 .header_container {
     display: grid;
-    grid-template-columns: 1fr 6fr 1fr;
+    grid-template-columns: 265px 6fr 1fr;
     border-bottom: 2px solid #999999;
     opacity: 100%;
 }
@@ -151,7 +151,7 @@ ul {
         /********* Careers *********/
         .menu_careers{
             display: none;
-            left: 660px;
+            left: 670px;
             padding: .3em;
             top: 77px;
             opacity:0%;    
